// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should display message for 1 expense correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $10.00
  </h1>
</div>
`;

exports[`Should display message for multiple expenses correctly 1`] = `
<div>
  <h1>
    Viewing 
    5
     
    expenses
     totalling 
    $89.00
  </h1>
</div>
`;
